test/social_network/config-beeline/sidecar.yaml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  # Entrypoint for service through Envoy
                  address: 0.0.0.0
                  port_value: 9999
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              virtual_hosts:
                                  - name: service
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/compose-post-service"
                                          route:
                                              cluster: compose-post-service
                                        - match:
                                              prefix: "/compose-post-redis"
                                          route:
                                              cluster: compose-post-redis
                                        - match:
                                              prefix: "/write-home-timeline-service"
                                          route:
                                              cluster: write-home-timeline-service
                                        - match:
                                              prefix: "/media-service"
                                          route:
                                              cluster: media-service
                                        - match:
                                              prefix: "/post-storage-service"
                                          route:
                                              cluster: post-storage-service
                                        - match:
                                              prefix: "/social-graph-service"
                                          route:
                                              cluster: social-graph-service
                                        - match:
                                              prefix: "/social-graph-mongodb"
                                          route:
                                              cluster: social-graph-mongodb
                                        - match:
                                              prefix: "/social-graph-redis"
                                          route:
                                              cluster: social-graph-redis
                                        - match:
                                              prefix: "/text-service"
                                          route:
                                              cluster: text-service
                                        - match:
                                              prefix: "/unique-id-service"
                                          route:
                                              cluster: unique-id-service
                                        - match:
                                              prefix: "/url-shorten-service"
                                          route:
                                              cluster: url-shorten-service
                                        - match:
                                              prefix: "/url-shorten-memcached"
                                          route:
                                              cluster: url-shorten-memcached
                                        - match:
                                              prefix: "/user-mention-service"
                                          route:
                                              cluster: user-mention-service
                                        - match:
                                              prefix: "/user-service"
                                          route:
                                              cluster: user-service
                                        - match:
                                              prefix: "/user-mongodb"
                                          route:
                                              cluster: user-mongodb
                                        - match:
                                              prefix: "/user-memcached"
                                          route:
                                              cluster: user-memcached
                                        - match:
                                              prefix: "/user-timeline-service"
                                          route:
                                              cluster: user-timeline-service
                                        - match:
                                              prefix: "/user-timeline-mongodb"
                                          route:
                                              cluster: user-timeline-mongodb
                                        - match:
                                              prefix: "/user-timeline-redis"
                                          route:
                                              cluster: user-timeline-redis
                                        - match:
                                              prefix: "/home-timeline-service"
                                          route:
                                              cluster: home-timeline-service
    clusters:
        - name: compose-post-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: compose-post-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: compose-post-service
                                      port_value: 9999

        - name: compose-post-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: compose-post-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: compose-post-redis
                                      port_value: 6379

        - name: write-home-timeline-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: write-home-timeline-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: write-home-timeline-service
                                      port_value: 9999

        - name: media-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: media-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: media-service
                                      port_value: 9999

        - name: post-storage-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: post-storage-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: post-storage-service
                                      port_value: 9999

        - name: social-graph-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: social-graph-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: social-graph-service
                                      port_value: 9999
        - name: social-graph-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: social-graph-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: social-graph-mongodb
                                      port_value: 27017

        - name: social-graph-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: social-graph-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: social-graph-redis
                                      port_value: 6379

        - name: text-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: text-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: text-service
                                      port_value: 9999

        - name: unique-id-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: unique-id-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: unique-id-service
                                      port_value: 9999

        - name: url-shorten-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: url-shorten-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: url-shorten-service
                                      port_value: 9999

        - name: url-shorten-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: url-shorten-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: url-shorten-memcached
                                      port_value: 11211

        - name: user-mention-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-mention-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-mention-service
                                      port_value: 9999

        - name: user-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-service
                                      port_value: 9999

        - name: user-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-mongodb
                                      port_value: 27017

        - name: user-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-memcached
                                      port_value: 11211

        - name: user-timeline-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-timeline-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-timeline-service
                                      port_value: 9999

        - name: user-timeline-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-timeline-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-timeline-mongodb
                                      port_value: 27017

        - name: user-timeline-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: user-timeline-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: user-timeline-redis
                                      port_value: 6379

        - name: home-timeline-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: home-timeline-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: home-timeline-service
                                      port_value: 9999
